# kmitl-llm-app-demo

./: .dockerignore  .env.example  .gitignore  CODE_TOUR.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
agent/: loop.py
alembic/: env.py
alembic/versions/: 0001_create_chunks.py
app/: __init__.py  ingest.py  llm.py  main.py  rag.py  schemas.py  store.py  store_pg.py  vectorstore.py
corpus/: 01-litellm-proxy.md  02-embeddings-bge-m3.md  03-sse-streaming.md  04-vector-store.md  05-retrieval-augmented-generation.md  06-min-score-floor.md  07-citations.md  08-evaluation-metrics.md  09-agents-and-tools.md  10-fastapi-backend.md
eval/: eval.py  judge.py  qrels.jsonl
examples/: README.md  layering.py  orm_repository.py
tests/: test_e2e.py  test_unit.py
web/: app.js  index.html
