[project]
name = "kmitl-llm-app-demo"
version = "0.1.0"
description = "A mini, readable chat + RAG app — the reference for KMITL 'Building LLM-Powered Applications'."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openai>=1.40",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
# asyncio_mode=auto lets us write `async def test_...` without a decorator —
# same convention the course portal's test suite uses.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
